# Ray-Tracing-Engine

./: README.md
Raytracer/: CMakeLists.txt
Raytracer/Models/: TripleB.json  cornell_box.json  jumping_ball.json
Raytracer/src/: Includes.h  IntersectionChecker.h  Parser.cpp  Parser.h  Raytracer.cpp  Raytracer.h  SceneAttributesCalculator.h  SceneManager.cpp  Shader.cpp  VectorCalculator.cpp
src/: IntersectionChecker.cpp  SceneAttributesCalculator.cpp  SceneManager.cpp  SceneManager.h  Shader.cpp  Shader.h  VectorCalculator.h  main.cpp
